@@ -272,7 +272,8 @@ class LaTeXTranslator(nodes.NodeVisitor):
         return '\\autopageref*{%s}' % self.idescape(id)
 
     def idescape(self, id):
-        return str(unicode(id).translate(tex_replace_map))
+        return unicode(id).translate(tex_replace_map).\
+            encode('ascii', 'backslashreplace').replace('\\', '_')
 
     def generate_indices(self):
         def generate(content, collapsed):
